# serializer version: 1
# name: test_switch_entities[switch.hdfury_vrroom_02_auto_switch_inputs-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_auto_switch_inputs',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Auto switch inputs',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Auto switch inputs',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'autosw',
    'unique_id': '000123456789_autosw',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_auto_switch_inputs-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Auto switch inputs',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_auto_switch_inputs',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_cec',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CEC',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CEC',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cec',
    'unique_id': '000123456789_cec',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 CEC',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_cec',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CEC RX0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CEC RX0',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cec0en',
    'unique_id': '000123456789_cec0en',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 CEC RX0',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CEC RX1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CEC RX1',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cec1en',
    'unique_id': '000123456789_cec1en',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 CEC RX1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CEC RX2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CEC RX2',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cec2en',
    'unique_id': '000123456789_cec2en',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 CEC RX2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CEC RX3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CEC RX3',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cec3en',
    'unique_id': '000123456789_cec3en',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_cec_rx3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 CEC RX3',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_cec_rx3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HTPC mode RX0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HTPC mode RX0',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'htpcmode0',
    'unique_id': '000123456789_htpcmode0',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 HTPC mode RX0',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HTPC mode RX1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HTPC mode RX1',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'htpcmode1',
    'unique_id': '000123456789_htpcmode1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 HTPC mode RX1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HTPC mode RX2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HTPC mode RX2',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'htpcmode2',
    'unique_id': '000123456789_htpcmode2',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 HTPC mode RX2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'HTPC mode RX3',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'HTPC mode RX3',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'htpcmode3',
    'unique_id': '000123456789_htpcmode3',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_htpc_mode_rx3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 HTPC mode RX3',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_htpc_mode_rx3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_infrared-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_infrared',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Infrared',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Infrared',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'iractive',
    'unique_id': '000123456789_iractive',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_infrared-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Infrared',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_infrared',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_mute_audio_tx0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_mute_audio_tx0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mute audio TX0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mute audio TX0',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mutetx0',
    'unique_id': '000123456789_mutetx0',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_mute_audio_tx0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Mute audio TX0',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_mute_audio_tx0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_mute_audio_tx1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_mute_audio_tx1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Mute audio TX1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Mute audio TX1',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mutetx1',
    'unique_id': '000123456789_mutetx1',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_mute_audio_tx1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Mute audio TX1',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_mute_audio_tx1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_oled_display-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_oled_display',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'OLED display',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'OLED display',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oled',
    'unique_id': '000123456789_oled',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_oled_display-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 OLED display',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_oled_display',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_relay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_relay',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Relay',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Relay',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay',
    'unique_id': '000123456789_relay',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_relay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 Relay',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_relay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_tx0_force_5v-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_tx0_force_5v',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TX0 force +5v',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TX0 force +5v',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tx0plus5',
    'unique_id': '000123456789_tx0plus5',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_tx0_force_5v-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 TX0 force +5v',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_tx0_force_5v',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_tx1_force_5v-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.hdfury_vrroom_02_tx1_force_5v',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'TX1 force +5v',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'TX1 force +5v',
    'platform': 'hdfury',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tx1plus5',
    'unique_id': '000123456789_tx1plus5',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities[switch.hdfury_vrroom_02_tx1_force_5v-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'HDFury VRROOM-02 TX1 force +5v',
    }),
    'context': <ANY>,
    'entity_id': 'switch.hdfury_vrroom_02_tx1_force_5v',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
